Add comments to author information.

--- a/Psychology.tex
+++ b/Psychology.tex
@@ -25,8 +25,8 @@
 % ==========Title==========
 
 \title{\bfseries } 
-\author{蒋雨蒙\thanks{学号：1200013733；北京大学心理学系2012级本科生；}}
-\date{\today}
+\author{ \thanks{ }} % Your name in the first blank and your additional information in \thanks{}
+\date{\today}        % delete \today if you don't want the date
 
 % ==========Document==========
 
@@ -38,7 +38,7 @@
 
 \begin{center}
 \parbox{130mm}{\zihao{-5}{\bfseries 摘\quad 要：}
-
+% Abstract here
 \par
 \vspace{1mm}
 \zihao{-5}{\bfseries 关键词：}关键词1\quad 关键词2\quad 关键词3}
