Add an example article into the template.

--- a/Psychology.tex
+++ b/Psychology.tex
@@ -23,9 +23,11 @@
 
 % ==========Title==========
 
-\title{\bfseries } 
-\author{ \thanks{ }} % Your name in the first blank and your additional information in \thanks{}
-\date{\today}        % delete \today if you don't want the date
+\title{\bfseries 工作记忆与挖掘机学习} 
+\author{荣兰祥 \thanks{山东蓝翔职业技术学校校长；}} 
+% Your name in the first blank and your additional information in \thanks{}
+\date{}
+% delete \today if you don't want the date
 
 % ==========Document==========
 
@@ -38,18 +40,37 @@
 \begin{center}
 \parbox{130mm}{\zihao{-5}{\bfseries 摘\quad 要：}
 % Abstract here
+% An example is as follows
+本研究主要研究了工作记忆和挖掘机学习之间的影响，通过……发现……
 \par
 \vspace{1mm}
-{\bfseries 关键词：}关键词1\quad 关键词2\quad 关键词3}
+{\bfseries 关键词：}工作记忆\quad 挖掘机\quad 蓝翔技校}
 \end{center}
 
 % ==========Body==========
 
+% Example article
 
+\section{前言}
+通过对前人的研究的归纳总结，我们发现工作记忆对学习有非常重要的影响现在问题来了，挖掘机技术哪家强？工作记忆对挖掘机技术有什么影响？这就是我们这项研究要解决的问题。
+
+\section{方法}
+\subsection{被试}
+本研究从山东蓝翔职业技术学校和五道口职业技术学校各招募了20名被试，每个学校男女各一半，……
+
+\subsection{实验流程}
+本研究用到的挖掘机都是蓝翔技校的教学用机，首先……
+
+\section{结果与讨论}
+\citeA{baddeley1992working}对工作记忆有非常系统的论述。通过这个研究我们发现，挖掘机的学习和工作记忆有着非常强的关联。……
+
+% ========About apacite===========
+% \cite{baddeley1992working}  => (Baddeley, 1992)
+% \citeA{baddeley1992working} => Baddeley (1992)
 
 % ==========References==========
 \renewcommand{\refname}{参考文献}
 % enter your .bib file name in the parentheses in the following line.
-\bibliography{}
+\bibliography{ref}
 
 \end{document}
