a more detailed structure, hopefully could be a guidance for better writing

--- a/Psychology.tex
+++ b/Psychology.tex
@@ -26,7 +26,7 @@
 \title{\bfseries 工作记忆与挖掘机学习} 
 \author{荣兰祥 \thanks{山东蓝翔职业技术学校校长；}} 
 % Your name in the first blank and your additional information in \thanks{}
-\date{}
+\date{\today}
 % delete \today if you don't want the date
 
 % ==========Document==========
@@ -58,10 +58,22 @@
 \subsection{被试}
 本研究从山东蓝翔职业技术学校和五道口职业技术学校各招募了20名被试，每个学校男女各一半，……
 
-\subsection{实验流程}
-本研究用到的挖掘机都是蓝翔技校的教学用机，首先……
+\subsection{仪器和刺激}
+我们有fMRI有木有！
+刺激就是一堆麻麻的点有木有！
 
-\section{结果与讨论}
+\subsection{实验设计}
+我们是三因素混合设计，其中有一个组内变量（上楼梯、下楼梯），组间变量分别是性别和挖掘机类型。
+
+\subsection{实验流程}
+好复杂啊，我可以懒的细写了，宝贝你就好好写吧～
+
+\subsection{结果}
+首先是描述性统计，大概感觉一下哈～
+然后好多验证性统计啊，t检验就不做了，做ANOVA会好多。等我学会，给你做结构方程啊多因素回归让你看不懂。
+对了，你看看我做的图是不是很好看？
+
+\section{讨论}
 \citeA{baddeley1992working}对工作记忆有非常系统的论述。通过这个研究我们发现，挖掘机的学习和工作记忆有着非常强的关联。……
 
 % ========About apacite===========
@@ -72,5 +84,10 @@
 \renewcommand{\refname}{参考文献}
 % enter your .bib file name in the parentheses in the following line.
 \bibliography{ref}
+
+\clearpage
+\section{附录}
+挖掘机参数评价表
+
 
 \end{document}
