Compiled the new template. PDF file updated.

--- a/Psychology.tex
+++ b/Psychology.tex
@@ -70,7 +70,7 @@
 
 \subsection{结果}
 首先是描述性统计，大概感觉一下哈～
-然后好多验证性统计啊，t检验就不做了，做ANOVA会好多。等我学会，给你做结构方程啊多因素回归让你看不懂。
+然后好多验证性统计啊，$t$检验就不做了，做ANOVA会好多。等我学会，给你做结构方程啊多因素回归让你看不懂。
 对了，你看看我做的图是不是很好看？
 
 \section{讨论}
